--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,3 +128,7 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
+
+[/Script/AIModule.AISystem]
+bAllowControllersAsEQSQuerier=False
+
