--- a/SoulsOfHel.uproject
+++ b/SoulsOfHel.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{089C5C3E-4171-9ECC-E34E-1989E13BE233}",
+	"EngineAssociation" : "4.24",
 	"Category": "",
 	"Description": "",
 	"Modules": [
